Fetch problems from git and add it to json file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "figlet": "^1.8.0",
     "gradient-string": "^3.0.0",
     "inquirer": "^12.5.0",
-    "nanospinner": "^1.2.2"
+    "nanospinner": "^1.2.2",
+    "open": "^10.1.0"
   },
   "bin": {
     "cliproject": "index.js"
